# refactoring_proj

./: .cursorrules  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  sonar-project.properties
.cursor/rules/: architecture.md  project_conventions.md  testing.md
.github/workflows/: ci-pipeline.yml
scripts/: fix_editable_pth.py
src/sport_training/: __init__.py  __main__.py  cli.py
src/sport_training/models/: __init__.py  exercise.py  goal.py  plan.py  user.py  workout.py
src/sport_training/services/: __init__.py  events.py  exercise_progress.py  plan_tracking.py  policy.py  workout_log.py
src/sport_training/storage/: __init__.py  exercise_goal_repository.py  exercise_log_repository.py  exercise_repository.py  goal_repository.py  memory_exercise_goals.py  memory_exercise_logs.py  memory_exercises.py  memory_goals.py  memory_planned_sessions.py  memory_plans.py  memory_users.py  memory_workouts.py  plan_repository.py  planned_session_repository.py  user_repository.py  workout_repository.py
src/sport_training/utils/: __init__.py  formatting.py  mathutils.py  penalties.py  priority.py
tests/: test_cli.py  test_events.py  test_exercise_progress_service.py  test_formatting_partial.py  test_models_exercise.py  test_models_goal.py  test_models_plan.py  test_models_user.py  test_models_workout.py  test_penalties.py  test_plan_tracking_service.py  test_policy.py  test_priority.py  test_storage_exercises.py  test_storage_goals.py  test_storage_plans.py  test_storage_users_workouts.py  test_utils_math.py  test_workout_log_service.py
